api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-service
spec:
  selector:
    app: api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
