api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 20.74.77.181.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 3000
            path: /
